versions/GNDS-v2.0/GNDS/c/src/v2.0/general/ColumnHeaders.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// ColumnHeaders is the basic handle type in this file. Example:
//    // Create a default ColumnHeaders object:
//    ColumnHeaders handle = ColumnHeadersDefault();
// Functions involving ColumnHeaders are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_GNDS_V2_0_GENERAL_COLUMNHEADERS
#define C_INTERFACE_GNDS_V2_0_GENERAL_COLUMNHEADERS

#include "GNDStk.h"
#include "v2.0/general/Column.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ColumnHeadersClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ ColumnHeaders
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ColumnHeadersClass *ColumnHeaders;

// --- Const-aware handles.
typedef const struct ColumnHeadersClass *const ConstHandle2ConstColumnHeaders;
typedef       struct ColumnHeadersClass *const ConstHandle2ColumnHeaders;
typedef const struct ColumnHeadersClass *      Handle2ConstColumnHeaders;
typedef       struct ColumnHeadersClass *      Handle2ColumnHeaders;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstColumnHeaders
ColumnHeadersDefaultConst();

// +++ Create, default
extern_c Handle2ColumnHeaders
ColumnHeadersDefault();

// --- Create, general, const
extern_c Handle2ConstColumnHeaders
ColumnHeadersCreateConst(
   ConstHandle2Column *const column, const size_t columnSize
);

// +++ Create, general
extern_c Handle2ColumnHeaders
ColumnHeadersCreate(
   ConstHandle2Column *const column, const size_t columnSize
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ColumnHeadersAssign(ConstHandle2ColumnHeaders self, ConstHandle2ConstColumnHeaders from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ColumnHeadersDelete(ConstHandle2ConstColumnHeaders self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ColumnHeadersRead(ConstHandle2ColumnHeaders self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ColumnHeadersWrite(ConstHandle2ConstColumnHeaders self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ColumnHeadersPrint(ConstHandle2ConstColumnHeaders self);

// +++ Print to standard output, as XML
extern_c int
ColumnHeadersPrintXML(ConstHandle2ConstColumnHeaders self);

// +++ Print to standard output, as JSON
extern_c int
ColumnHeadersPrintJSON(ConstHandle2ConstColumnHeaders self);


// -----------------------------------------------------------------------------
// Child: column
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ColumnHeadersColumnHas(ConstHandle2ConstColumnHeaders self);

// +++ Clear
extern_c void
ColumnHeadersColumnClear(ConstHandle2ColumnHeaders self);

// +++ Size
extern_c size_t
ColumnHeadersColumnSize(ConstHandle2ConstColumnHeaders self);

// +++ Add
extern_c void
ColumnHeadersColumnAdd(ConstHandle2ColumnHeaders self, ConstHandle2ConstColumn column);

// --- Get, by index \in [0,size), const
extern_c Handle2ConstColumn
ColumnHeadersColumnGetConst(ConstHandle2ConstColumnHeaders self, const size_t index_);

// +++ Get, by index \in [0,size)
extern_c Handle2Column
ColumnHeadersColumnGet(ConstHandle2ColumnHeaders self, const size_t index_);

// +++ Set, by index \in [0,size)
extern_c void
ColumnHeadersColumnSet(
   ConstHandle2ColumnHeaders self,
   const size_t index_,
   ConstHandle2ConstColumn column
);

// +++ Has, by index
extern_c int
ColumnHeadersColumnHasByIndex(
   ConstHandle2ConstColumnHeaders self,
   const int index
);

// --- Get, by index, const
extern_c Handle2ConstColumn
ColumnHeadersColumnGetByIndexConst(
   ConstHandle2ConstColumnHeaders self,
   const int index
);

// +++ Get, by index
extern_c Handle2Column
ColumnHeadersColumnGetByIndex(
   ConstHandle2ColumnHeaders self,
   const int index
);

// +++ Set, by index
extern_c void
ColumnHeadersColumnSetByIndex(
   ConstHandle2ColumnHeaders self,
   const int index,
   ConstHandle2ConstColumn column
);

// +++ Has, by name
extern_c int
ColumnHeadersColumnHasByName(
   ConstHandle2ConstColumnHeaders self,
   const char *const name
);

// --- Get, by name, const
extern_c Handle2ConstColumn
ColumnHeadersColumnGetByNameConst(
   ConstHandle2ConstColumnHeaders self,
   const char *const name
);

// +++ Get, by name
extern_c Handle2Column
ColumnHeadersColumnGetByName(
   ConstHandle2ColumnHeaders self,
   const char *const name
);

// +++ Set, by name
extern_c void
ColumnHeadersColumnSetByName(
   ConstHandle2ColumnHeaders self,
   const char *const name,
   ConstHandle2ConstColumn column
);

// +++ Has, by unit
extern_c int
ColumnHeadersColumnHasByUnit(
   ConstHandle2ConstColumnHeaders self,
   const char *const unit
);

// --- Get, by unit, const
extern_c Handle2ConstColumn
ColumnHeadersColumnGetByUnitConst(
   ConstHandle2ConstColumnHeaders self,
   const char *const unit
);

// +++ Get, by unit
extern_c Handle2Column
ColumnHeadersColumnGetByUnit(
   ConstHandle2ColumnHeaders self,
   const char *const unit
);

// +++ Set, by unit
extern_c void
ColumnHeadersColumnSetByUnit(
   ConstHandle2ColumnHeaders self,
   const char *const unit,
   ConstHandle2ConstColumn column
);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/general/ColumnHeaders/src/custom.h"

#undef extern_c
#endif